// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DiskStorage .create() should reject on limits 1`] = `[ValidationError]`;

exports[`DiskStorage .create() should set status and bytesWritten 1`] = `
File {
  "bytesWritten": 0,
  "contentType": "video/mp4",
  "createdAt": "2022-02-02T00:00:00.000Z",
  "expiredAt": "2022-02-02T01:00:00.000Z",
  "id": "e8fed598250d10ea-7f59007b4b7cf67-120941ca7dc37b78",
  "metadata": {
    "custom": "",
    "lastModified": 1635398061454,
    "mimeType": "video/mp4",
    "name": "testfile.mp4",
    "sha1": "ZAPAntzKARqtb+j3B529GAOf3kI=",
    "size": 64,
  },
  "name": "anonymous/testfile.mp4",
  "originalName": "testfile.mp4",
  "size": 64,
  "status": "created",
}
`;

exports[`DiskStorage .list() should return all user files 1`] = `
[
  {
    "createdAt": 2022-02-02T00:00:00.000Z,
    "id": "e8fed598250d10ea-7f59007b4b7cf67-120941ca7dc37b78",
    "modifiedAt": 2022-02-02T00:00:00.000Z,
  },
]
`;

exports[`disk > .create() > should create disk file with correct status and bytesWritten 1`] = `
File {
  "ETag": undefined,
  "bytesWritten": 0,
  "content": undefined,
  "contentType": "video/mp4",
  "createdAt": "2022-02-02T00:00:00.000Z",
  "expiredAt": undefined,
  "hash": undefined,
  "id": "e8fed598250d10ea-7f59007b4b7cf67-120941ca7dc37b78",
  "metadata": {
    "custom": "",
    "lastModified": 1635398061454,
    "mimeType": "video/mp4",
    "name": "testfile.mp4",
    "sha1": "ZAPAntzKARqtb+j3B529GAOf3kI=",
    "size": 64,
  },
  "modifiedAt": undefined,
  "name": "anonymous/testfile.mp4",
  "originalName": "testfile.mp4",
  "size": 64,
  "status": "created",
}
`;

exports[`disk > .create() > should reject creation when file size exceeds limits 1`] = `[ValidationError]`;

exports[`disk > .list() > should return all user files in storage 1`] = `
[
  {
    "createdAt": 2022-02-02T00:00:00.000Z,
    "id": "/anonymous/testfile.mp4",
    "modifiedAt": 2022-02-02T00:00:00.000Z,
  },
]
`;
